--- a/application/views/scripts/public/index.phtml
+++ b/application/views/scripts/public/index.phtml
@@ -80,7 +80,7 @@
 				<div class="item">
 					<div class="inner">
 						<div class="wrapper">
-							<img src="http://placehold.it/300x300">
+							<img src=<?= ($this->baseUrl() . "/img/" . $this->escape($promotion->img))?>>
 								<div class="coupon-info">
 									<span class="price" style="">
 									<!--<?php echo $this->escape($promotion->price);?>-->	
