--- a/application/layouts/scripts/_topnavmainuser.phtml
+++ b/application/layouts/scripts/_topnavmainuser.phtml
@@ -67,17 +67,17 @@
                         'default',true
                     );
                  ?>"
-		title="Edit"><?php ?></a></li>
+		title="Cambiare profilo">profilo</a></li>
 
-    <!--<li><a
+    <li><a
 		href="
                 <?= $this->url(array(
-                        'controller' => 'public',
-                        'action'     => 'login'),
+                        'controller' => 'user',
+                        'action'     => 'logout'),
                         'default',true
                     );
                  ?>"
-		title="Registrati">Logout</a></li>-->
+		title="Uscire">Logout</a></li>
 
 </ul>
 </div>
