--- a/application/layouts/scripts/user.phtml
+++ b/application/layouts/scripts/user.phtml
@@ -13,7 +13,7 @@
 
 	<!-- end #header -->
 	<nav>
-		<?= $this->render('_topnavmain_user.phtml') ?>
+		<?= $this->render('_topnavmainuser.phtml') ?>
 	</nav>
 	<!-- end #menu -->
 	  	  <?php echo $this->layout()->content; ?>
