Implementazione di Admin Panel

--- a/application/layouts/scripts/_topnavmain.phtml
+++ b/application/layouts/scripts/_topnavmain.phtml
@@ -154,12 +154,12 @@
         <li><a
         href="
                 <?= $this->url(array(
-                        'controller' => 'user',
-                        'action'     => 'logout'),
+                        'controller' => 'admin',
+                        'action'     => 'panel'),
                         'default',true
                     );
                  ?>"
-        title="Uscire">Admin Panel</a></li>
+        title="Panello di controllo">Admin Panel</a></li>
     <?php endif ?>   
 </ul>
 </div>
