--- a/public/css/table_style.css
+++ b/public/css/table_style.css
@@ -100,11 +100,11 @@ tr:last-child td:last-child {
  
 td {
   background:#FFFFFF;
-  padding:15px;
+  padding:5px;
   text-align:left;
   vertical-align:middle;
   font-weight:300;
-  font-size:18px;
+  font-size:15px;
   text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
   border-right: 1px solid #C1C3D1;
 }
@@ -135,4 +135,19 @@ td.text-center {
 
 td.text-right {
   text-align: right;
+}
+.operations{
+  
+}
+.operations .operation-list{
+  list-style: none;
+  display: flex;
+  padding-left: 0px
+}
+.operations .operation-list .operation{
+  margin-left: 20px;
+  color: black;
+}
+.operations .operation-list .operation:hover{
+  cursor: pointer;
 }
