--- a/application/views/scripts/staff/panel.phtml
+++ b/application/views/scripts/staff/panel.phtml
@@ -1,7 +1,16 @@
 <?php $this->headLink()->appendStylesheet($this->baseUrl().'/css/table_style.css'); ?>
 <?php $this->headLink()->appendStylesheet($this->baseUrl().'/css/admin_panel_style.css'); ?>
 
-
+<div>
+	<a href=" <?= $this->url(array(
+                        'controller' => 'staff',
+                        'action'     => 'addpromotion',
+                        'param' => 'user'
+                        ),
+                        'default',true
+                    );
+                 ?>">Creare nuova promozione</a>
+</div>
 <div class="table-title">
 	<h3>Tabella di Promozioni</h3>
 </div>
