--- a/application/layouts/scripts/main.phtml
+++ b/application/layouts/scripts/main.phtml
@@ -1,13 +1,16 @@
 <?php echo $this->doctype() ?>
+
 <html>
 <head>
 	<?php $this->headMeta(); ?>
-    <?php $this->headLink()->appendStylesheet($this->baseUrl().'/css/styles.css'); ?>
-    <?php $this->headLink()->appendStylesheet("https://fonts.googleapis.com/css?family=Lobster|Montserrat|Ropa+Sans"); ?>
-    <?php $this->headLink()->appendStylesheet($this->baseUrl().'/css/font-awesome-4.7.0/css/font-awesome.min.css'); ?>
-    <?= $this->headScript()->prependFile($this->baseUrl() . '/js/jquery-3.2.1.min.js'); ?>
-    <?= $this->headTitle(); ?>
 
+    <?php $this->headLink()->prependStylesheet($this->baseUrl().'/css/styles.css'); ?>
+    <?php $this->headLink()->prependStylesheet("https://fonts.googleapis.com/css?family=Lobster|Montserrat|Ropa+Sans"); ?>
+    <?php $this->headLink()->prependStylesheet($this->baseUrl().'/css/font-awesome-4.7.0/css/font-awesome.min.css'); ?>
+    <?= $this->headScript()->prependFile($this->baseUrl() . '/js/jquery-3.2.1.min.js'); ?>
+    <script type="text/javascript" source = "https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <?= $this->headTitle(); ?>
+    
         <?php
 
     	$style=""; 
@@ -28,5 +31,8 @@
 	</nav>
 	<!-- end #menu -->
 	  	  <?php echo $this->layout()->content; ?>
+
+  </body>
 </body>
+
 </html>
