--- a/public/css/table_style.css
+++ b/public/css/table_style.css
@@ -25,7 +25,7 @@ div.table-title {
   background: white;
   border-radius:3px;
   border-collapse: collapse;
-  height: 320px;
+  /*height: 320px;*/
   margin: auto;
   max-width: 600px;
   padding:5px;
