--- a/application/views/scripts/public/viewpromotion.phtml
+++ b/application/views/scripts/public/viewpromotion.phtml
@@ -1,24 +1,50 @@
+<?php $this->headLink()->prependStylesheet($this->baseUrl().'/css/promotion_view_style.css'); ?>
 <div class="promotion-info">
-
+	<div class="img-wrapper">
 	<img src=<?=$this->baseUrl() . "/img/" . $this->escape($this->promotion->img)?>>
-	<label>Azienda
-		<span><?php echo $this->promotion->company?></span>
-	</label>
-	<label>Data di inizio
-		<span><?php echo $this->promotion->datebegin?></span>
-	</label>
-	<label>Data di fine
-		<span><?php echo $this->promotion->datefine?></span>
-	</label>
-	<label>Descrizione
-		<span><?php echo $this->promotion->datefine?></span>
-	</label>
-	<label>Prezzo
-		<span><?php echo $this->promotion->price?></span>
-	</label>
+	</div>
+<div class="promotion-list-wrapper">
+	<ul class="promotion-list" style="list-style: none;">
+		<li class="list-element">
+			<label>Azienda
+				<span><?php echo $this->promotion->company?></span>
+			</label>	
+		</li>
+		<li class="list-element">
+			<label>Data di inizio
+				<span><?php echo $this->promotion->datebegin?></span>
+			</label>	
+		</li>
+		<li class="list-element">
+			<label>Data di fine
+				<span><?php echo $this->promotion->datefine?></span>
+			</label>	
+		</li>
+		<li class="list-element">
+			<label>Data di fine
+				<span><?php echo $this->promotion->datefine?></span>
+			</label>	
+		</li>
+		<li class="list-element">
+			<label>Descrizione
+				<span><?php echo $this->promotion->description?></span>
+			</label>	
+		</li>
+		<li class="list-element">
+			<label>Prezzo
+				<span><?php echo $this->promotion->price?></span>
+			</label>	
+		</li>
+	</ul>
+	</div>
+</div>
+	
+	
+	
+	
 	<?php if($this->acl->isAllowed($this->auth,'buy')) : ?>
 		<?php if($this->validation) : ?>
-		<a href=<?= $this->url(array(
+		<a style="padding:20px 20px;background-color: blue;" href=<?= $this->url(array(
        						 'controller' => 'public',
        						 'action'     => 'buypromotion',
        						 'id' => $this->promotion->promoid
