--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,11 +3,14 @@ html{
 	
 }
 body{
-	/*background-image: url(https://www.creationsiteinternet.be/file/2014/04/pink-bg.jpg);*/
+	
 	margin: 0px;
-	background-color: gray;
+	
 	height: 100%;
-	/*overflow: hidden;*/
+	background: #485563;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #29323c, #485563);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, #29323c, #485563); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 a{
 	text-decoration: none;
@@ -176,13 +179,19 @@ nav:after{
 	display: flex;
 	justify-content: center;
 }
+
 .content .content-wrapper .content-element{
 	display: flex;
 	flex-wrap: wrap;
 }
 .content .content-wrapper .content-element .item{
+
 	margin: 10px;
+	background-color: white;
 	/*overflow: hidden;*/
+}
+.content .content-wrapper .content-element .item::hover{
+	background-color: white;
 }
 .content .content-wrapper .content-element .item{
 	-webkit-transform: translateY(200px);
@@ -199,13 +208,17 @@ nav:after{
 	width:	300px;
 	height: 300px;
 }
+
 .content .content-wrapper .content-element .item
  .inner .wrapper img{
  	width: auto;
  	height: 300px;
  }
-
 .content .content-wrapper .content-element .item
+ .inner .wrapper img:hover{
+ 	opacity: 0.5;
+ }
+/*.content .content-wrapper .content-element .item
  .inner .wrapper .coupon-info{
  	background-color:#2c3f52;
  	position:relative;
@@ -227,7 +240,7 @@ nav:after{
  	border-radius: 0px;
  	cursor: pointer;
  }
-
+*/
  body{
 	
 	overflow: visible;
